Preparando TDD do CakesController.php
